Put craydl gpu and non-gpu libraries into separate directories in sdk/lib64.  Symlink to choose desired one.  Added README with seg fault output.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,58 +55,29 @@ else()
    message("Found ProcessLib at ${ProcessLib}")
 endif (NOT EXISTS ${ProcessLib})
 
-find_library(SpecInstLib SiVCamDll ${ALL_LIBS})
-if (NOT EXISTS ${SpecInstLib})
-   message(FATAL_ERROR "Could not find SpecInst SiVCamDll library!")
-else()
-   message("Found SpecInstLib at ${SpecInstLib}")
-endif (NOT EXISTS ${SpecInstLib})
+#find_package(CUDA)
+
+#if (CUDA_FOUND)
+#	message("Found nVidia CUDA.  Using regular craydl library.")
 
 find_library(craydlLib craydl ${ALL_LIBS})
 if (NOT EXISTS ${craydlLib})
-   message(FATAL_ERROR "Could not find craydl library!")
+	message(FATAL_ERROR "Could not find craydl library!")
 else()
-   message("Found craydlLib at ${craydlLib}")
+	message("Found craydlLib at ${craydlLib}")
 endif (NOT EXISTS ${craydlLib})
 
-find_library(craydlGpuLib craydl_gpu ${ALL_LIBS})
-if (NOT EXISTS ${craydlGpuLib})
-   message(FATAL_ERROR "Could not find craydl_gpu library!")
-else()
-   message("Found craydlGpuLib at ${craydlGpuLib}")
-endif (NOT EXISTS ${craydlGpuLib})
-
-find_library(cbfLib cbf ${ALL_LIBS})
-if (NOT EXISTS ${cbfLib})
-   message(FATAL_ERROR "Could not find CBF library!")
-else()
-   message("Found CBF lib at ${cbfLib}")
-endif (NOT EXISTS ${cbfLib})
-
-#set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_MODULE_PATH})
-#cmake_policy(PUSH)
-#set(MARCCD_USE_STATIC_LIBS        ON)
-#find_package(MarCCD)
-#cmake_policy(POP)
-#if (MARCCD_FOUND)
-#   if (MARCCD_USE_STATIC_LIBS)
-#      set (EXTERNAL_STATIC_LIBRARIES ${EXTERNAL_STATIC_LIBRARIES}
-#      ${MARCCD_LIBRARIES})
-#   else()
-#      set (EXTERNAL_SHARED_LIBRARIES ${EXTERNAL_SHARED_LIBRARIES}
-#      ${MARCCD_LIBRARIES})
-#   endif()
 #else()
-#   message( "Could not find marccd libraries!")
+#	message("nVidia CUDA NOT found.  Using craydl_nocuda library for testing
+#	purposes.")
+#	find_library(craydlNoCudaLib craydl_nocuda ${ALL_LIBS})
+#	if (NOT EXISTS ${craydlNoCudaLib})
+#		message(FATAL_ERROR "Could not find craydl_nocuda library!")
+#	else()
+#		message("Found craydlNoCudaLib at ${craydlNoCudaLib}")
+#	endif (NOT EXISTS ${craydlNoCudaLib})
 #endif()
 
-include(FindOpenSSL)
-find_package(OpenSSL)
-if (NOT OPENSSL_FOUND)
-   message(FATAL_ERROR "Could not find openssl libraries!")
-endif ()
-
 add_executable(test test.cpp)
-#target_link_libraries(test RayonixHs ${LimaLib} ${ProcessLib} ${SpecInstLib} ${craydlLib} ${craydlGpuLib} ${MARCCD_LIBRARIES} ${cbfLib} ${OPENSSL_LIBRARIES} gsl dl)
 target_link_libraries(test RayonixHs ${LimaLib} ${ProcessLib} ${SpecInstLib} ${craydlLib} ${craydlGpuLib} ${cbfLib} ${OPENSSL_LIBRARIES} gsl dl)
 
