Updated README file with sdk info.  Turned on all compiler warnings.  Added some missing cases to SyncCtrolObj::checkTrigMode.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,10 +19,10 @@ endif()
 
 ################################################################################################################################################################################
 #set (CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -g -DNO_LIMA_DEBUG") # we want -g for release
-set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -g -DNO_LIMA_DEBUG -DWITH_SPS_IMAGE") # we want -g for release
+set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wall -g -DNO_LIMA_DEBUG -DWITH_SPS_IMAGE") # we want -g for release
 
 #set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0") #cmake auto adds "-g" for Debug
-set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DWITH_SPS_IMAGE") #cmake auto adds "-g" for Debug
+set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O0 -DWITH_SPS_IMAGE") #cmake auto adds "-g" for Debug
 
 set(ALL_INCLUDES ${BOOST_INCLUDE_DIRS} ${LIMA_INCLUDE_DIRS} ${RAYONIXHS_INCLUDE_DIRS})
 set(ALL_LIBS ${RAYONIXHS_LIB_DIRS} ${LIMA_LIB_DIRS} ${BOOST_LIB_DIRS})
