--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,61 +1,189 @@
 ###########################################################################
 # This file is part of LImA, a Library for Image Acquisition
 #
-#  Copyright (C) : 2009-2017
+#  Copyright (C) : 2009-2019
 #  European Synchrotron Radiation Facility
-#  CS40220 38043 Grenoble Cedex 9 
+#  CS40220 38043 Grenoble Cedex 9
 #  FRANCE
-# 
+#
 #  Contact: lima@esrf.fr
-# 
+#
 #  This is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
 #  the Free Software Foundation; either version 3 of the License, or
 #  (at your option) any later version.
-# 
+#
 #  This software is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
 #  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 #  GNU General Public License for more details.
-# 
+#
 #  You should have received a copy of the GNU General Public License
 #  along with this program; if not, see <http://www.gnu.org/licenses/>.
 ############################################################################
-set(NAME "rayonixhs")
+cmake_minimum_required(VERSION 3.1)
 
-set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--add-needed")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+project(rayonixhs)
 
-#SOURCEs
-set(${NAME}_srcs src/RayonixHsShutterCtrlObj.cpp src/RayonixHsCamera.cpp  
-	src/RayonixHsDetInfoCtrlObj.cpp  src/RayonixHsInterface.cpp 
-	src/RayonixHsSyncCtrlObj.cpp src/FrameStatusCb.cpp src/RayonixHsBinCtrlObj.cpp)
+# Include additional modules that are used inconditionnaly
+include(GNUInstallDirs)
+include(GenerateExportHeader)
 
-add_library(lima${NAME} SHARED ${${NAME}_srcs})
-
-#INCLUDEs
-target_include_directories(lima${NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_include_directories(lima${NAME} PUBLIC "/opt/rayonix/include")
-target_include_directories(lima${NAME} PUBLIC "/opt/rayonix/include/marccd")
-target_include_directories(lima${NAME} PUBLIC "/opt/rayonix/include/craydl")
+# If conda build, always set lib dir to 'lib'
+if($ENV{CONDA_BUILD})
+  set(CMAKE_INSTALL_LIBDIR "lib")
+endif()
 
 #LIBRARIES
-find_library(RAYONIXHS_CRAYDL_LIB craydl /opt/rayonix/lib64)
+find_library(RAYONIXHS_CRAYDL_LIB 
+  NAMES craydl
+  PATHS "/opt/rayonix/lib64"
+  NO_CMAKE_FIND_ROOT_PATH
+  NO_DEFAULT_PATH
+  )
+
 if (("${RAYONIXHS_CRAYDL_LIB}" STREQUAL "RAYONIXHS_CRAYDL_LIB-NOTFOUND"))
-  message(FATAL_ERROR "${NAME} : libcraydl not found, you can search it in cmake-gui or try to install it if it isn't here.")
+  message(FATAL_ERROR "${NAME} : libcraydl not found") 
 endif()
 
-target_link_libraries(lima${NAME} limacore)
-target_link_libraries(lima${NAME} ${RAYONIXHS_CRAYDL_LIB})
+# Set lower / upper case project names
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
+string(TOLOWER "${PROJECT_NAME}" PROJECT_NAME_LOWER)
 
-limatools_set_library_soversion(lima${NAME} "VERSION")
-install(TARGETS lima${NAME} LIBRARY DESTINATION lib)
+# Set targets export name (used by lima and dependencies)
+set(TARGETS_EXPORT_NAME "${PROJECT_NAME_LOWER}-targets")
+#set(namespace "${PROJECT_NAME}::")
+
+# Check if project is being used directly or via add_subdirectory
+set(CAMERA_MASTER_PROJECT OFF)
+if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+  set(CAMERA_MASTER_PROJECT ON)
+endif()
+
+if (CAMERA_MASTER_PROJECT)
+  find_package(Lima REQUIRED COMPONENTS devel tools)
+endif()
+
+# CMake additional macros
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${LIMA_CMAKE_INCLUDE_DIRS} ${CMAKE_MODULE_PATH})
+
+include(LimaTools)
+
+# Set version
+include(project_version)
+
+# Enable python binding code compilation using sip generator
+if (CAMERA_MASTER_PROJECT)
+  option(LIMA_ENABLE_PYTHON "compile python binding code?" OFF)
+  option(LIMA_ENABLE_PYTANGO_SERVER "install python tango server?" OFF)
+
+  if (LIMA_ENABLE_PYTHON)
+    limatools_find_python_and_sip()
+  endif()
+endif()
+
+find_package(PvAPI REQUIRED)
+
+file(GLOB_RECURSE RAYONIXHS_INCS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
+
+# Library definition
+add_library(rayonixhs SHARED
+  src/RayonixhsCamera.cpp
+  src/RayonixhsInterface.cpp
+  src/RayonixhsDetInfoCtrlObj.cpp
+  src/RayonixhsSyncCtrlObj.cpp
+  src/RayonixhsBinCtrlObj.cpp
+  src/RayonixhsShutterCtrlObj.cpp
+  src/FrameStatusCb.cpp
+  ${RAYONIXHS_INCS}
+)
+
+
+# Generate export macros
+generate_export_header(rayonixhs)
+
+# Set version and output name
+set_target_properties(rayonixhs PROPERTIES
+  OUTPUT_NAME "lima${PROJECT_NAME_LOWER}"
+  VERSION "${PROJECT_VERSION}"
+  SOVERSION "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}")
+
+# Add dependencies
+target_include_directories(rayonixhs
+  PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+  PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"           # For export header
+  PUBLIC "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
+  )
+
+target_include_directories(rayonixhs
+  PUBLIC "/opt/rayonix/include"
+  PUBLIC "/opt/rayonix/include/marccd"
+  PUBLIC "/opt/rayonix/include/craydl"
+  )
+
+
+target_link_libraries(rayonixhs PUBLIC limacore)
+
+target_link_libraries(rayonixhs PUBLIC ${RAYONIXHS_CRAYDL_LIB})
+
+if(WIN32)
+  target_compile_definitions(rayonixhs
+    PRIVATE rayonixhs_EXPORTS
+    PUBLIC NOMINMAX)
+  set_target_properties(rayonixhs PROPERTIES PREFIX "lib" IMPORT_PREFIX "lib")
+endif()
+
+# Binding code for python
+if(LIMA_ENABLE_PYTHON)
+  limatools_run_sip_for_camera(rayonixhs)
+endif()
+
+# Generate and install package config file and version
+if(CAMERA_MASTER_PROJECT)
+  set (PROJECT_LIBRARIES rayonixhs)
+  set(SIP_INSTALL_DIR ${CMAKE_INSTALL_DATADIR}/sip/lima)
+  set(CMAKE_INSTALL_DIR ${CMAKE_INSTALL_DATADIR}/cmake/lima)
+  include(package_config)
+endif()
+
+## Installation
+
+install(
+  TARGETS rayonixhs
+  EXPORT "${TARGETS_EXPORT_NAME}"
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}   # import library
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}   # .so files are libraries
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}   # .dll files are binaries
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}  # this does not actually install anything (but used by downstream projects)
+)
+
+install(
+  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
+  COMPONENT devel
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+  FILES_MATCHING PATTERN "*.h"
+)
+
+install(
+  FILES
+    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/project_version.h
+    ${PROJECT_BINARY_DIR}/rayonixhs_export.h
+  COMPONENT devel
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
 
 if(LIMA_ENABLE_PYTHON)
-    limatools_run_sip_for_camera(${NAME})
-    install(FILES python/__init__.py DESTINATION "${PYTHON_SITE_PACKAGES_DIR}/Lima/RayonixHS")
+  install(
+    DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/
+    DESTINATION "${PYTHON_SITE_PACKAGES_DIR}/Lima/RayonixHs"
+    )
+  if (LIMA_ENABLE_PYTANGO_SERVER)
+    add_subdirectory(tango)
+  endif()
 endif()
 
-if(LIMA_ENABLE_TESTS)
-	add_subdirectory(test/)
+## Tests
+if(CAMERA_ENABLE_TESTS)
+    enable_testing()
+    #add_subdirectory(test)
 endif()
