--- a/conda/camera/meta.yaml
+++ b/conda/camera/meta.yaml
@@ -18,17 +18,16 @@ build:
 requirements:
   host:
     - python {{ python }}
-    - sip 4.19.8              # For compatibility with pyqt 5.9.2
-    - lima-core
+    - sip 4.19*
+    - lima-core 1.9.24
     - craydl_c
   build:
-    - git
+    - ninja
     - cmake
-    - make
     - {{ compiler('cxx') }}
   run:
-    - python {{ python }}
-    - sip >=4.19.4, <=4.19.8  # For compatibility with pyqt 5.9.2
+    - python
+    - {{ pin_compatible('sip', min_pin='x.x.x', max_pin='x') }}
     - {{ pin_compatible('lima-core', max_pin='x.x') }}
     - craydl_c
 
